Modify main banner

--- a/_includes/workshop_ad.html
+++ b/_includes/workshop_ad.html
@@ -21,7 +21,7 @@ Cuadro de publicidad en la parte superior de la página de inicio del sitio web 
           </p>
           {% if page.helper %}
           <p>
-          <strong>Ayudantes</strong>
+          <strong>Organizador Local:r</strong>
           {{page.helper | join: ', ' %}}
           </p>
           {% endif %}
