--- a/_includes/workshop_ad.html
+++ b/_includes/workshop_ad.html
@@ -6,11 +6,11 @@ Cuadro de publicidad en la parte superior de la página de inicio del sitio web 
     <div class="col-md-10 col-md-offset-1">
       <h2>{{page.venue}}</h2>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-5">
           <p>{{page.humandate}}</p>
           <p>{% if page.humantime %}{{page.humantime}}{% endif %}</p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-7">
           <p>
           <strong>Instructores:</strong>
           {% if page.instructor %}
@@ -21,8 +21,8 @@ Cuadro de publicidad en la parte superior de la página de inicio del sitio web 
           </p>
           {% if page.helper %}
           <p>
-          <strong>Organizador Local:r</strong>
-          {{page.helper | join: ', ' %}}
+          <strong>Organizador Local:</strong>
+          <a href="https://caev03.github.io">{{page.helper | join: ', ' %}}</a>
           </p>
           {% endif %}
         </div>
