--- a/_includes/workshop_ad.html
+++ b/_includes/workshop_ad.html
@@ -4,7 +4,8 @@ Cuadro de publicidad en la parte superior de la página de inicio del sitio web 
 <div class="jumbotron">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-      <h2>{{page.venue}}</h2>
+      <h1>{{site.title}}</h1>
+      <h1>{{page.venue}}</h1>
       <div class="row">
         <div class="col-md-5">
           <p>{{page.humandate}}</p>
