--- a/_includes/workshop_ad.html
+++ b/_includes/workshop_ad.html
@@ -5,7 +5,7 @@ Cuadro de publicidad en la parte superior de la página de inicio del sitio web 
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
       <h1>{{site.title}}</h1>
-      <h3>{{page.venue}}</h3>
+      <h2><a href="http://uniandes.edu.co">{{page.venue}}</a></h2>
       <div class="row">
         <div class="col-md-5">
           <p>{{page.humandate}}</p>
