--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -13,7 +13,7 @@
     </ul>
   
   
-  <div class="col-md-4">
+<!--  <div class="col-md-4">
     <h3 id="syllabus-r">R para análisis científicos reproducibles</h3>
     <ul>
     <li>Gestión de proyectos con RStudio</li>
@@ -24,7 +24,7 @@
       <li>Escribiendo buen software</li>
       <li><a href="{{site.swc_pages}}/r-novice-gapminder-es/reference/">Reference...</a></li>
     </ul>
-  </div>
+  </div> -->
 
 
 </div>
