--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -55,7 +55,7 @@
 <div class="row">
   <div class="col-md-6">
 
-    <h3 id="syllabus-python">Python</h3>
+    <h3 id="syllabus-git">Python</h3>
     <ul>
       <li>Fundamentos de Python</li>
       <li>Analizando Datos</li>
