--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -1,6 +1,6 @@
 <div class="row">
+  
   <div class="col-md-4">
-
     <h3 id="syllabus-shell">La Terminal de Unix</h3>
     <ul>
         <li>Archivos y directorios</li>
@@ -9,28 +9,11 @@
         <li>Looping sobre archivos</li>
         <li>Crear y ejecutar scripts de terminal</li>
         <li>Encontrar cosas</li>
-      <li><a href="{{site.swc_pages}}/shell-novice-es/reference/">Referencia...</a></li>
+        <li><a href="{{site.swc_pages}}/shell-novice-es/reference/">Referencia...</a></li>
     </ul>
-  
-  
-<!--  <div class="col-md-4">
-    <h3 id="syllabus-r">R para análisis científicos reproducibles</h3>
-    <ul>
-    <li>Gestión de proyectos con RStudio</li>
-      <li>Explorando Data Frames</li>
-      <li>Creando gráficas con <code>ggplot</code></li>
-      <li>Creando y usando funciones</li>
-      <li>Manipulando dataframes con <code>dplyr</code> y <code>plyr</code></li>
-      <li>Escribiendo buen software</li>
-      <li><a href="{{site.swc_pages}}/r-novice-gapminder-es/reference/">Reference...</a></li>
-    </ul>
-  </div> -->
+  </div>
 
-
-</div>
-
-  <div class="col-md-6">
-
+  <div class="col-md-4">
     <h3 id="syllabus-git">El control de versiones con Git</h3>
     <ul>
       <li>Creando un repositorio</li>
@@ -50,9 +33,8 @@
   </div>
   
 
-  <div class="col-md-6">
-
-    <h3 id="syllabus-git">Python</h3>
+  <div class="col-md-4">
+    <h3 id="syllabus-python">Python</h3>
     <ul>
       <li>Fundamentos de Python</li>
       <li>Analizando Datos</li>
@@ -69,4 +51,5 @@
       <li><a href="{{site.swc_pages}}/python-novice-inflammation/reference">Referencia...</a></li>
     </ul>
   </div>
+  
 </div>
