--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -31,6 +31,9 @@
       <li><a href="{{site.swc_pages}}/git-novice-es/reference">Referencia...</a></li>
     </ul>
   </div>
+
+</div>
+<div class="row">
   
   <div class="col-md-4">
     <h3 id="syllabus-python">Python</h3>
