--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -1,6 +1,6 @@
 <div class="row">
-  
   <div class="col-md-4">
+
     <h3 id="syllabus-shell">La Terminal de Unix</h3>
     <ul>
         <li>Archivos y directorios</li>
@@ -9,11 +9,29 @@
         <li>Looping sobre archivos</li>
         <li>Crear y ejecutar scripts de terminal</li>
         <li>Encontrar cosas</li>
-        <li><a href="{{site.swc_pages}}/shell-novice-es/reference/">Referencia...</a></li>
+      <li><a href="{{site.swc_pages}}/shell-novice-es/reference/">Referencia...</a></li>
     </ul>
-  </div>
+  
+  
+<!--  <div class="col-md-4">
+    <h3 id="syllabus-r">R para análisis científicos reproducibles</h3>
+    <ul>
+    <li>Gestión de proyectos con RStudio</li>
+      <li>Explorando Data Frames</li>
+      <li>Creando gráficas con <code>ggplot</code></li>
+      <li>Creando y usando funciones</li>
+      <li>Manipulando dataframes con <code>dplyr</code> y <code>plyr</code></li>
+      <li>Escribiendo buen software</li>
+      <li><a href="{{site.swc_pages}}/r-novice-gapminder-es/reference/">Reference...</a></li>
+    </ul>
+  </div> -->
 
-  <div class="col-md-4">
+
+</div>
+
+<div class="row">
+  <div class="col-md-6">
+
     <h3 id="syllabus-git">El control de versiones con Git</h3>
     <ul>
       <li>Creando un repositorio</li>
@@ -31,26 +49,5 @@
       <li><a href="{{site.swc_pages}}/git-novice-es/reference">Referencia...</a></li>
     </ul>
   </div>
-
-</div>
-<div class="row">
   
-  <div class="col-md-4">
-    <h3 id="syllabus-python">Python</h3>
-    <ul>
-      <li>Fundamentos de Python</li>
-      <li>Analizando Datos</li>
-      <li>Visualizando Datos/li>
-      <li>Trabajando con Listas</li>
-      <li>Repetiendo con Bucles</li>
-      <li>Analizando Datos de Archivos Multiples</li>
-      <li>Tomar Deciciones</li>
-      <li>Creando Funciones</li>
-      <li>Errores y Excepciones</li>
-      <li>Programacion Defensiva</li>
-      <li>Depurarando Codigo Python</li>
-      <li>Ejecutando Desde Bash</li>
-    </ul>
-  </div>
-
 </div>
