--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -11,6 +11,23 @@
         <li>Encontrar cosas</li>
       <li><a href="{{site.swc_pages}}/shell-novice-es/reference/">Referencia...</a></li>
     </ul>
+
+    <br><br><h3 id="syllabus-python">Python</h3>
+    <ul>
+      <li>Fundamentos de Python</li>
+      <li>Analizando Datos</li>
+      <li>Visualizando Datos/li>
+      <li>Trabajando con Listas</li>
+      <li>Repetiendo con Bucles</li>
+      <li>Analizando Datos de Archivos Multiples</li>
+      <li>Tomar Deciciones</li>
+      <li>Creando Funciones</li>
+      <li>Errores y Excepciones</li>
+      <li>Programacion Defensiva</li>
+      <li>Depurarando Codigo Python</li>
+      <li>Ejecutando Desde Bash</li>
+      <li><a href="{{site.swc_pages}}/python-novice-inflammation/reference">Referencia...</a></li>
+    </ul>
   
   
 <!--  <div class="col-md-4">
@@ -47,28 +64,6 @@
       <li>Hospedaje</li>
       <li>Usando Git desde RStudio</li>
       <li><a href="{{site.swc_pages}}/git-novice-es/reference">Referencia...</a></li>
-    </ul>
-  </div>
-  
-</div>
-
-<div class="row">
-  <div class="col-md-4">
-    <h3 id="syllabus-python">Python</h3>
-    <ul>
-      <li>Fundamentos de Python</li>
-      <li>Analizando Datos</li>
-      <li>Visualizando Datos/li>
-      <li>Trabajando con Listas</li>
-      <li>Repetiendo con Bucles</li>
-      <li>Analizando Datos de Archivos Multiples</li>
-      <li>Tomar Deciciones</li>
-      <li>Creando Funciones</li>
-      <li>Errores y Excepciones</li>
-      <li>Programacion Defensiva</li>
-      <li>Depurarando Codigo Python</li>
-      <li>Ejecutando Desde Bash</li>
-      <li><a href="{{site.swc_pages}}/python-novice-inflammation/reference">Referencia...</a></li>
     </ul>
   </div>
   
