--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -11,28 +11,11 @@
         <li>Encontrar cosas</li>
       <li><a href="{{site.swc_pages}}/shell-novice-es/reference/">Referencia...</a></li>
     </ul>
-
-    <br><br><h3 id="syllabus-python">Python</h3>
-    <ul>
-      <li>Fundamentos de Python</li>
-      <li>Analizando Datos</li>
-      <li>Visualizando Datos/li>
-      <li>Trabajando con Listas</li>
-      <li>Repetiendo con Bucles</li>
-      <li>Analizando Datos de Archivos Multiples</li>
-      <li>Tomar Deciciones</li>
-      <li>Creando Funciones</li>
-      <li>Errores y Excepciones</li>
-      <li>Programacion Defensiva</li>
-      <li>Depurarando Codigo Python</li>
-      <li>Ejecutando Desde Bash</li>
-      <li><a href="{{site.swc_pages}}/python-novice-inflammation/reference">Referencia...</a></li>
-    </ul>
   
 </div>
 
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-4">
 
     <h3 id="syllabus-git">El control de versiones con Git</h3>
     <ul>
@@ -52,4 +35,24 @@
     </ul>
   </div>
   
+</div>
+
+<div class="row">
+  <div class="col-md-4">
+    <h3 id="syllabus-python">Python</h3>
+    <ul>
+      <li>Fundamentos de Python</li>
+      <li>Analizando Datos</li>
+      <li>Visualizando Datos</li>
+      <li>Trabajando con Listas</li>
+      <li>Repetiendo con Bucles</li>
+      <li>Analizando Datos de Archivos Multiples</li>
+      <li>Tomar Deciciones</li>
+      <li>Creando Funciones</li>
+      <li>Errores y Excepciones</li>
+      <li>Programacion Defensiva</li>
+      <li>Depurarando Codigo Python</li>
+      <li>Ejecutando Desde Bash</li>
+    </ul>
+  </div>
 </div>
