--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -1,4 +1,5 @@
 <div class="row">
+  
   <div class="col-md-4">
 
     <h3 id="syllabus-shell">La Terminal de Unix</h3>
@@ -12,9 +13,8 @@
       <li><a href="{{site.swc_pages}}/shell-novice-es/reference/">Referencia...</a></li>
     </ul>
   
-</div>
+  </div>
 
-<div class="row">
   <div class="col-md-4">
 
     <h3 id="syllabus-git">El control de versiones con Git</h3>
@@ -35,9 +35,6 @@
     </ul>
   </div>
   
-</div>
-
-<div class="row">
   <div class="col-md-4">
     <h3 id="syllabus-python">Python</h3>
     <ul>
@@ -53,6 +50,8 @@
       <li>Programacion Defensiva</li>
       <li>Depurarando Codigo Python</li>
       <li>Ejecutando Desde Bash</li>
+      <li><a href="{{site.swc_pages}}/python-novice-inflammation/reference">Referencia...</a></li>
     </ul>
   </div>
+  
 </div>
