--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -5,7 +5,7 @@
     <h3 id="syllabus-shell">La Terminal de Unix</h3>
     <ul>
         <li>Archivos y directorios</li>
-        <li>History and tab completion</li>
+        <li>Historia y completar paths</li>
         <li>Tuberías y redirección</li>
         <li>Looping sobre archivos</li>
         <li>Crear y ejecutar scripts de terminal</li>
@@ -17,9 +17,9 @@
 
   <div class="col-md-4">
 
-    <h3 id="syllabus-git">El control de versiones con Git</h3>
+    <h3 id="syllabus-git">Control de versiones con Git</h3>
     <ul>
-      <li>Creando un repositorio</li>
+      <li>Crear un repositorio</li>
       <li>Rastreando Cambios: <code>add</code>, <code>commit</code>, ...</li>
       <li>Explorando el **History**: <code>status</code>, <code>diff</code>, ...</li>
       <li>Ignorando cosas</li>
